--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,9 @@ services:
       - -c
       - |
         /opt/besu/bin/besu --data-path=/opt/besu/data \
-        --genesis-file=/opt/besu/genesis.json --rpc-http-enabled \
+        --genesis-file=/opt/besu/genesis.json --rpc-http-enabled --rpc-http-port=8545 \
         --host-allowlist="*" --rpc-http-cors-origins="all" \
-        --rpc-http-api=ETH,NET,IBFT;
-
+        --rpc-http-api=ADMIN, IBFT, QBFT, CLIQUE, ETH, NET, TXPOOL, WEB3;
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
       - ./node-1/data:/opt/besu/data
@@ -38,7 +37,7 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
          --config-file=/config/config.toml \
-         --bootnodes=enode://a97984ffa2f5c2e7109d826961d639eee46c3e6bc11ba038129721ce6b85cd51e19f4f7434a7b116d635881584abce229781c1bd3ad92faabb752ba713679d81@172.16.239.30:30303 --p2p-port=30303;
+         --bootnodes=enode://59ef8b79beebfeb8676e03b9893ab280ecdc900732b3fa4244aab5569c9278afbbf671963ca90ed18ed6571b3809432a0f1cb478c10b1bebc0bbad543fc7062c@172.16.239.30:30303 --p2p-port=30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
@@ -62,7 +61,7 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
          --config-file=/config/config.toml \
-         --bootnodes=enode://a97984ffa2f5c2e7109d826961d639eee46c3e6bc11ba038129721ce6b85cd51e19f4f7434a7b116d635881584abce229781c1bd3ad92faabb752ba713679d81@172.16.239.30:30303 --p2p-port=30303;
+         --bootnodes=enode://59ef8b79beebfeb8676e03b9893ab280ecdc900732b3fa4244aab5569c9278afbbf671963ca90ed18ed6571b3809432a0f1cb478c10b1bebc0bbad543fc7062c@172.16.239.30:30303 --p2p-port=30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
@@ -85,16 +84,64 @@ services:
         sleep 10;
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
-         --config-file=/config/configoooooo.toml \
-         --bootnodes=enode://a97984ffa2f5c2e7109d826961d639eee46c3e6bc11ba038129721ce6b85cd51e19f4f7434a7b116d635881584abce229781c1bd3ad92faabb752ba713679d81@172.16.239.30:30303 --p2p-port=30303;
+         --config-file=/config/config.toml \
+         --bootnodes=enode://59ef8b79beebfeb8676e03b9893ab280ecdc900732b3fa4244aab5569c9278afbbf671963ca90ed18ed6571b3809432a0f1cb478c10b1bebc0bbad543fc7062c@172.16.239.30:30303 --p2p-port=30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
       - ./node-4/data:/opt/besu/data
       - ./log-config.xml:/config/log-config.xml
-      - ./config.toml:/config/configoooooo.toml
+      - ./config.toml:/config/config.toml
     depends_on:
       - bootnode
     networks:
       besu-network:
         ipv4_address: 172.16.239.33
+  node-5:
+    container_name: node-5
+    image: hyperledger/besu:23.4.4
+
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+        sleep 10;
+        /opt/besu/bin/besu --data-path=/opt/besu/data \
+         --genesis-file=/opt/besu/genesis.json \
+         --config-file=/config/config.toml \
+         --bootnodes=enode://59ef8b79beebfeb8676e03b9893ab280ecdc900732b3fa4244aab5569c9278afbbf671963ca90ed18ed6571b3809432a0f1cb478c10b1bebc0bbad543fc7062c@172.16.239.30:30303 --p2p-port=30303;
+
+    volumes:
+      - ./genesis.json:/opt/besu/genesis.json
+      - ./node-5/data:/opt/besu/data
+      - ./log-config.xml:/config/log-config.xml
+      - ./config.toml:/config/config.toml
+    depends_on:
+      - bootnode
+    networks:
+      besu-network:
+        ipv4_address: 172.16.239.34
+  node-6:
+    container_name: node-6
+    image: hyperledger/besu:23.4.4
+
+    entrypoint:
+      - /bin/bash
+      - -c
+      - |
+        sleep 10;
+        /opt/besu/bin/besu --data-path=/opt/besu/data \
+         --genesis-file=/opt/besu/genesis.json \
+         --config-file=/config/config.toml \
+         --bootnodes=enode://59ef8b79beebfeb8676e03b9893ab280ecdc900732b3fa4244aab5569c9278afbbf671963ca90ed18ed6571b3809432a0f1cb478c10b1bebc0bbad543fc7062c@172.16.239.30:30303 --p2p-port=30303;
+
+    volumes:
+      - ./genesis.json:/opt/besu/genesis.json
+      - ./node-6/data:/opt/besu/data
+      - ./log-config.xml:/config/log-config.xml
+      - ./config.toml:/config/config.toml
+    depends_on:
+      - bootnode
+    networks:
+      besu-network:
+        ipv4_address: 172.16.239.35
