--- a/templates/docker_compose_template_ethash.yml
+++ b/templates/docker_compose_template_ethash.yml
@@ -18,7 +18,8 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
         --genesis-file=/opt/besu/genesis.json --rpc-http-enabled --rpc-http-port=8545 \
         --host-allowlist="*" --rpc-http-cors-origins="all" \
-        --rpc-http-api=ADMIN, IBFT, QBFT, CLIQUE, ETH, NET, TXPOOL, WEB3;
+        --rpc-http-api=ADMIN, IBFT, QBFT, CLIQUE, ETH, NET, TXPOOL, WEB3 \
+        --miner-enabled --miner-coinbase fe3b557e8fb62b89f4916b721be55ceb828dbd73;
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
       - ./node-1/data:/opt/besu/data
