--- a/templates/node_template.yml
+++ b/templates/node_template.yml
@@ -18,7 +18,7 @@
       - ./log-config.xml:/config/log-config.xml
       - ./config.toml:/config/config.toml
     depends_on:
-      - bootnode
+      - node-1
     networks:
       besu-network:
         ipv4_address: 172.16.239.{ip_suffix}
