updates - working reporting

--- a/caliper/benchmarks/scenario/simple/config.yaml
+++ b/caliper/benchmarks/scenario/simple/config.yaml
@@ -45,3 +45,11 @@ test:
         arguments:
           << : *simple-args
           money: 100
+monitors:
+  resource:
+  - module: docker
+    options:
+      interval: 5
+      cpuUsageNormalization: true
+      containers:
+      - all
