--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 # logging="DEBUG"
-# identity="bashar-Predator-PH317-52"
 nat-method="AUTO"
 host-allowlist=["*"]
 min-gas-price=0
+miner-enabled=true
+miner-coinbase="fe3b557e8fb62b89f4916b721be55ceb828dbd73"
 
-# p2p-host="172.25.11.75"
 p2p-port=30303
 
 # RPC HTTP related
