--- a/caliper/docker-compose.yml
+++ b/caliper/docker-compose.yml
@@ -5,16 +5,25 @@ networks:
     external: true
 
 services:
-    caliper:
-        container_name: caliper
-        image: hyperledger/caliper:0.5.0
-        command: launch manager
-        environment:
-          - CALIPER_BIND_SUT=besu:latest
-          - CALIPER_BENCHCONFIG=benchmarks/scenario/simple/config.yaml
-          - CALIPER_NETWORKCONFIG=config-presc.json
-        volumes:
-          - .:/hyperledger/caliper/workspace
-        networks:
-          besu-docker_besu-network:
-            ipv4_address: 172.16.239.31
+  loadbalancer:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      besu-docker_besu-network:
+        ipv4_address: 172.16.239.7
+  caliper:
+    container_name: caliper
+    image: hyperledger/caliper:0.5.0
+    command: launch manager
+    environment:
+      - CALIPER_BIND_SUT=besu:latest
+      - CALIPER_BENCHCONFIG=benchmarks/scenario/simple/config.yaml
+      - CALIPER_NETWORKCONFIG=config-presc.json
+    volumes:
+      - .:/hyperledger/caliper/workspace
+    depends_on:
+      - loadbalancer
+    networks:
+      besu-docker_besu-network:
+        ipv4_address: 172.16.239.6
