--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,14 @@ services:
         --genesis-file=/opt/besu/genesis.json --rpc-http-enabled --rpc-http-port=8545 \
         --host-allowlist="*" --rpc-http-cors-origins="all" \
         --rpc-http-api=ADMIN, IBFT, QBFT, CLIQUE, ETH, NET, TXPOOL, WEB3 \
-        --rpc-ws-enabled --rpc-ws-port=8546 --p2p-port=30303;
+        --rpc-ws-enabled --rpc-ws-port=8546 --p2p-port=30303 --min-gas-price=0 \
+        --miner-coinbase f17f52151EbEF6C7334FAD080c5704D77216b732;
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
       - ./node-1/data:/opt/besu/data
     networks:
       besu-network:
-        ipv4_address: 172.16.239.32
+        ipv4_address: 172.16.239.8
   node-2:
     container_name: node-2
     image: hyperledger/besu:23.4.4
@@ -38,7 +39,7 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
          --config-file=/config/config.toml \
-         --bootnodes=enode://8735d34beac2b8ce44b5317cb2c92eac99f5cc4cec2fd913753575d1759167f53d247cd94bbd3ab03977b5cf7abacdf9fe05f6195a3feab2a69bffc134b3f968@172.16.239.32:30303 --p2p-port=30303;
+         --bootnodes=enode://2167a97e4be71322619c0753f010b756c8d2788bf0abe63f70885632c8ee18cdb3d6fb25840b42169d60b9a4f5542f5fa23b4c558de57f1a86b0a90725732a18@172.16.239.8:30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
@@ -49,7 +50,7 @@ services:
       - node-1
     networks:
       besu-network:
-        ipv4_address: 172.16.239.33
+        ipv4_address: 172.16.239.9
   node-3:
     container_name: node-3
     image: hyperledger/besu:23.4.4
@@ -62,7 +63,7 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
          --config-file=/config/config.toml \
-         --bootnodes=enode://8735d34beac2b8ce44b5317cb2c92eac99f5cc4cec2fd913753575d1759167f53d247cd94bbd3ab03977b5cf7abacdf9fe05f6195a3feab2a69bffc134b3f968@172.16.239.32:30303 --p2p-port=30303;
+         --bootnodes=enode://2167a97e4be71322619c0753f010b756c8d2788bf0abe63f70885632c8ee18cdb3d6fb25840b42169d60b9a4f5542f5fa23b4c558de57f1a86b0a90725732a18@172.16.239.8:30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
@@ -73,7 +74,7 @@ services:
       - node-1
     networks:
       besu-network:
-        ipv4_address: 172.16.239.34
+        ipv4_address: 172.16.239.10
   node-4:
     container_name: node-4
     image: hyperledger/besu:23.4.4
@@ -86,7 +87,7 @@ services:
         /opt/besu/bin/besu --data-path=/opt/besu/data \
          --genesis-file=/opt/besu/genesis.json \
          --config-file=/config/config.toml \
-         --bootnodes=enode://8735d34beac2b8ce44b5317cb2c92eac99f5cc4cec2fd913753575d1759167f53d247cd94bbd3ab03977b5cf7abacdf9fe05f6195a3feab2a69bffc134b3f968@172.16.239.32:30303 --p2p-port=30303;
+         --bootnodes=enode://2167a97e4be71322619c0753f010b756c8d2788bf0abe63f70885632c8ee18cdb3d6fb25840b42169d60b9a4f5542f5fa23b4c558de57f1a86b0a90725732a18@172.16.239.8:30303;
 
     volumes:
       - ./genesis.json:/opt/besu/genesis.json
@@ -97,4 +98,4 @@ services:
       - node-1
     networks:
       besu-network:
-        ipv4_address: 172.16.239.35
+        ipv4_address: 172.16.239.11
