--- a/caliper/benchmarks/scenario/simple/config.yaml
+++ b/caliper/benchmarks/scenario/simple/config.yaml
@@ -1,57 +1,65 @@
-simpleArgs: &simple-args
-  initialMoney: 10000
-  moneyToTransfer: 100
-  numberOfAccounts: &number-of-accounts 1000
-
+simpleArgs: &id001
+    initialMoney: 10000
+    moneyToTransfer: 100
+    numberOfAccounts: 2000
 test:
-  name: simple
-  description: >-
-    This is an example benchmark for Caliper, to test the backend DLT's
-    performance with simple account opening & querying transactions.
-  workers:
-    number: 10
-  rounds:
-    - label: open
-      description: >-
-        Test description for the opening of an account through the deployed
-        contract.
-      txNumber: *number-of-accounts
-      rateControl:
-        type: fixed-rate
-        opts:
-          tps: 50
-      workload:
-        module: benchmarks/scenario/simple/open.js
-        arguments: *simple-args
-    - label: query
-      description: Test description for the query performance of the deployed contract.
-      txNumber: *number-of-accounts
-      rateControl:
-        type: fixed-rate
-        opts:
-          tps: 100
-      workload:
-        module: benchmarks/scenario/simple/query.js
-        arguments: *simple-args
-    - label: transfer
-      description: Test description for transfering money between accounts.
-      txNumber: 50
-      rateControl:
-        type: fixed-rate
-        opts:
-          tps: 5
-      workload:
-        module: benchmarks/scenario/simple/transfer.js
-        arguments:
-          << : *simple-args
-          money: 100
+    name: simple
+    description: This is an example benchmark for Caliper, to test the backend DLT's
+        performance with simple account opening & querying transactions.
+    workers:
+        type: local
+        number: 10
+    rounds:
+    -   label: open
+        description: Test description for the opening of an account through the deployed
+            contract, default tps=50.
+        txNumber: 2000
+        rateControl:
+            type: fixed-rate
+            opts:
+                tps: 1000
+        workload:
+            module: benchmarks/scenario/simple/open.js
+            arguments:
+                initialMoney: 10000
+                moneyToTransfer: 100
+                numberOfAccounts: 2000
+    -   label: query
+        description: Test description for the query performance of the deployed contract,
+            default tps=100.
+        txNumber: 2000
+        rateControl:
+            type: fixed-rate
+            opts:
+                tps: 1000
+        workload:
+            module: benchmarks/scenario/simple/query.js
+            arguments:
+                initialMoney: 10000
+                moneyToTransfer: 100
+                numberOfAccounts: 2000
+    -   label: transfer
+        description: Test description for transfering money between accounts, default
+            tps=5.
+        txNumber: 2000
+        rateControl:
+            type: fixed-rate
+            opts:
+                tps: 1000
+        workload:
+            module: benchmarks/scenario/simple/transfer.js
+            arguments:
+                initialMoney: 10000
+                moneyToTransfer: 100
+                numberOfAccounts: 2000
+                money: 100
 
 monitors:
-  resource:
-  - module: docker
-    options:
-      interval: 5
-      containers:
-      - http://172.16.239.9:2375/node-2
-      - http://172.16.239.10:2375/node-3
-      - http://172.16.239.11:2375/node-4
+    resource:
+    -   module: docker
+        options:
+            interval: 5
+            containers:
+            - http://172.16.239.9:2375/node-2
+            - http://172.16.239.10:2375/node-3
+            - http://172.16.239.11:2375/node-4
