--- a/templates/node_template.yml
+++ b/templates/node_template.yml
@@ -19,5 +19,4 @@
     depends_on:
       - node-1
     networks:
-      besu-network:
-        ipv4_address: 172.16.239.{ip_suffix}
+      - besu-network
